# CtrlAltDiffuse

./: .gitignore  Ctrl+Alt+Diffuse.pptx  README.md  benchmark_FID_IS_KID.ipynb  benchmark_celeba_latest_FID_IS_KID.ipynb  benchmark_flowers_latest_FID_IS_KID.ipynb  benchmark_reference_celeba_FID_IS_KID.ipynb  benchmark_reference_flowres_FID_IS_KID.ipynb  celeba_data_analyse.ipynb  data_analyse.ipynb  flowers_data_analyse.ipynb  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docker-build-push.yml
app/: app.py
app/static/css/: styles.css
app/static/js/: scripts.js
app/templates/: index.html
docker/: Dockerfile  Dockerfile.cuda11  Dockerfile.cuda12
src/: diffuse_generator.py  diffuse_trainer.py  reference_generator.py  reference_trainer.py
src/configs/: __init__.py  generator_config.py  trainer_config.py
src/data_modules/: __init__.py  celebs_data_module.py  flowers_data_module.py  subset_dataset.py
src/diffusion_model/: diffusion_model.py  reference_diffusion_model.py
src/diffusion_model/components/: attention_block.py  down_block.py  residual_block.py  sinusodial_embeding.py  unet.py  up_block.py
src/diffusion_model/schedulers/: ddim_scheduler.py
src/reference_diffusion_model/: __init__.py  reference_diffusion_model.py
