[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ctrlaltdiffuse"
version = "0.1.0"
description = "Pytorch Lightning implementation of a Deep Diffusion Implicit Model"
readme = "README.md"
requires-python = ">=3.10.0"

dependencies = [
    "gdown>=4.6.0",
    "pytorch_lightning==2.4.0",
    "tyro==0.8.11"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
diffuse-generate = "diffuse_generator:entrypoint"
diffuse-train = "diffuse_trainer:entrypoint"